# scenebot_rust

./: .gitignore  Cargo.toml  Dockerfile.build  README.md  \  x86_release.sh
src/: event_handler.rs  events.rs  main.rs
src/command_handler/: explicit_command_list.rs  handler.rs  mod.rs
src/command_handler/commands/: config.rs  help.rs  mod.rs  send.rs  webp_transfer.rs
src/command_handler/update_command/: load_patchnote.rs  mod.rs  update_checker.rs  update_cmds.rs
src/events/: autosend.rs  guild_delete.rs  guildbotadd.rs  mod.rs  scene_core.rs
src/utils/: guild_config.rs  mod.rs  scene_core.rs
src/utils/frameworks/: mod.rs  reaction_pages.rs
