[package]
name = "scene_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.6.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11"
