[package]
name = "scene_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.6.0"
log = "0.4.17"
env_logger = "0.9.1"
lazy_static = "1.4.0"
fast_image_resize = "2.5.0"
image = "0.24"
reqwest = "0.11"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "fs"]

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "cache", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11"
